[package]
name = "cogo-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

# simd utf8 check support
simd = ["simdutf8"]

[dependencies]
cogo = "0.1"
itoa = "0.4.5"
btoi = "0.4.2"
log = "0.4"
derive_more = "0.99"


#bytes dep
bitflags = "1.3"
bytes = "1.0.0"
serde = "1.0.0"
futures-core = { version = "0.3", default-features = false, features = ["alloc"] }
simdutf8 = { version = "0.1.3", optional = true }
either = {version = "1.5.3",features = ["serde"]}

[dev-dependencies]
rand = "0.8"
env_logger = "0.9"